Closed Bug 1638331 Opened 5 years ago Closed 5 years ago

Expand the conditions for crashing in GetDWriteSystemFonts.

Categories

(Core :: Graphics: Text, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

Details

Attachments

(1 file)

We're not seeing any crashes so let's look for a null systemFonts
as well.

We're not seeing any crashes so let's look for a null systemFonts
as well.

Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9bfa9853d763 Expand the conditions for crashing in GetDWriteSystemFonts. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Blocks: 1509155
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: