Bug 1638331 - Expand the conditions for crashing in GetDWriteSystemFonts. r=jfkthame

We're not seeing any crashes so let's look for a null systemFonts
as well.

Differential Revision: https://phabricator.services.mozilla.com/D75546